kubernetes/apps/default/misc-ingress/app/ingress-internal-ssl-pve.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: proxmox.png
    gethomepage.dev/name: Proxmox
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/description: Proxmox Virtual Environment
spec:
  ingressClassName: internal
  rules:
    - host: &host "pve.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pve
                port:
                  number: 8006
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve
subsets:
  - addresses:
      - ip: "${SECRET_PVE_IP}"
    ports:
      - name: https
        port: 8006
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pve
spec:
  ports:
    - name: https
      port: 8006
  type: ClusterIP
